# Boundless-Framework

./: Cargo.toml  build-extension.sh
boundless-macros/: Cargo.toml
boundless-macros/src/: lib.rs
framework/: Cargo.toml
framework/src/: clamped.rs  entity.rs  id.rs  lib.rs  math.rs  sync.rs
godot/: Cargo.toml
godot-macros/: Cargo.toml
godot-macros/src/: lib.rs
godot/src/: entity.rs  id.rs  lib.rs
godot/src/assets/shaders/: ComputeWaterDisplacement.glsl  FetchWaterDisplacement.glsl  RenderUnderwaterEffect.glsl  RenderWaterMaskFragment.glsl  RenderWaterMaskVertex.glsl
godot/src/attributes/: attribute_collection.rs  attribute_provider.rs  mod.rs
godot/src/attributes/attribute_modifiers/: attribute_modifier.rs  attribute_modifier_collection.rs  attribute_modifier_entries.rs  attribute_modifier_entry.rs  attribute_modifier_operation.rs  mod.rs
godot/src/damage/: damage.rs  damage_builder.rs  damage_dealer.rs  damage_instance.rs  damage_modifier.rs  damageable.rs  mod.rs
godot/src/damage/area/: damage_area.rs  damage_area_builder.rs  damage_area_hitbox_behaviour.rs  damage_area_hitbox_builder.rs  mod.rs
godot/src/rendering/: mod.rs
godot/src/water/: mod.rs  water_mesh.rs  water_mesh_registry.rs
godot/src/water/displacement_effect/: compute_pass.rs  displacement_compositor_effect.rs  displacement_subscription.rs  fetch_pass.rs  mod.rs
godot/src/water/underwater_effect/: apply_effect_pass.rs  mesh_data.rs  mod.rs  projection_utils.rs  render_mask_pass.rs  textures.rs  underwater_compositor_effect.rs
src/: lib.rs
src/framework/: as_node.rs  id.rs  (+3 more)
(+86 files in other folders)
