[package]
name = "godot-boundless"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
standalone = []

[dependencies]
itertools = "0.14.0"
godot = {version = "0.5.0", features = ["experimental-godot-api", "experimental-threads"]}
boundless = { path = "../framework" }
boundless-godot-macros = { path = "../godot-macros" }
